# ESP32_study

./: .gitignore  README.md
10_FreeRTOS_Queue/: CMakeLists.txt
10_FreeRTOS_Queue/11_FreeRTOS_Semaphore/: CMakeLists.txt
10_FreeRTOS_Queue/11_FreeRTOS_Semaphore/main/: real_time_stats_example_main.c
10_FreeRTOS_Queue/main/: CMakeLists.txt  queue_example.c
11_FreeRTOS_semaphore_interrupt/: CMakeLists.txt
11_FreeRTOS_semaphore_interrupt/main/: real_time_stats_example_main.c
1_GPIO/: CMakeLists.txt
1_GPIO/main/: CMakeLists.txt  hello_world_main.c
2_ESP_IDF/: CMakeLists.txt
2_ESP_IDF/main/: gpio_example_main.c
3_ADC/3-1_ADC_read_mV/: CMakeLists.txt
3_ADC/3-1_ADC_read_mV/main/: oneshot_read_main.c
3_ADC/3_ADC/: CMakeLists.txt
3_ADC/main/: oneshot_read_main.c
4_button_gpio/: CMakeLists.txt
4_button_gpio/main/: gpio_example_main.c
5_idf_screen/: CMakeLists.txt
5_idf_screen/main/: i2c_basic_example_main.c
6_PWM_LED/: CMakeLists.txt
6_PWM_LED/main/: CMakeLists.txt  mcpwm_servo_control_example_main.c
7_FreeRTOS_TASK/7-1_FreeRTOS-TASK_dual_create/: CMakeLists.txt
7_FreeRTOS_TASK/7-2_FreeRTOS-TASK_delete/: CMakeLists.txt
7_FreeRTOS_TASK/7-3_FreeRTOS_Interrupt/: CMakeLists.txt
7_FreeRTOS_TASK/7_FreeRTOS-TASK_single_create/: CMakeLists.txt
8_I2C/1_I2C_master/: CMakeLists.txt
8_I2C/2_I2C_SLAVE/: CMakeLists.txt
9_mqtt/: CMakeLists.txt  README.md
9_mqtt/main/: CMakeLists.txt  app_main.c  config.h  mpu6050.c  mpu6050.h  mqtt_handler.c  mqtt_handler.h  sensor_task.c  sensor_task.h  wifi_handler.c  wifi_handler.h
(+11 files in other folders)
